Fixing logo spacing

--- a/assets/styles/homepage.css
+++ b/assets/styles/homepage.css
@@ -214,7 +214,7 @@ body.with-header {
 	padding-top: 40px;
 	display: flex;
 	justify-content: center;
-	gap: 10px;
+	gap: 15px;
 }
 
 .social-logo {
